Added options to systemd service (non-package deployment)

--- a/templates/ipmi_exporter.service.j2
+++ b/templates/ipmi_exporter.service.j2
@@ -17,7 +17,32 @@
 {{ 'Group=nobody' }}
 {{ 'ExecStart=' + hostvars[inventory_hostname]['ipmi_exporter_dest'] +
   '/ipmi_exporter --config.file=' +
-  hostvars[inventory_hostname]['ipmi_exporter_dest'] + '/ipmi_exporter.yaml' }}
+  hostvars[inventory_hostname]['ipmi_exporter_dest'] + '/ipmi_exporter.yaml' -}}
+{% if vars['ipmi_exporter_options'] is defined and
+  vars['ipmi_exporter_options'] != '' %}
+{% for i in vars['ipmi_exporter_options'] %}
+{% if i['freeipmi_path'] is defined and i['freeipmi_path'] != '' %}
+{{ ' \\' }}
+{{ ' --freeipmi.path=' + i['freeipmi_path'] -}}
+{% endif %}
+{% if i['web_listen_address'] is defined and i['web_listen_address'] != '' %}
+{{ ' \\' }}
+{{ ' --web.listen-address=' + i['web_listen_address'] -}}
+{% endif %}
+{% if i['log_level'] is defined and i['log_level'] in ['debug', 'info', 'warn',
+  'error'] %}
+{{ ' \\' }}
+{{ ' --log.level=' + i['log_level'] -}}
+{% endif %}
+{% if i['log_format'] is defined and i['log_format'] in ['logfmt', 'json'] %}
+{{ ' \\' }}
+{{ ' --log.format=' + i['log_format'] -}}
+{% endif %}
+{% if loop['last'] %}
+{{ '' }}
+{% endif %}
+{% endfor %}
+{% endif %}
 
 {{ '[Install]' }}
 {{ 'WantedBy=multi-user.target' }}
